k8s/stateful-services/mysql.yaml
# store MySQL credentials in a Secret
# apiVersion: v1
# kind: Secret
# metadata:
#   name: mysql-secret
#   namespace: url-shortener
# type: Opaque
# data:
#   MYSQL_ROOT_PASSWORD: cGFzc3dvcmQ=
#   MYSQL_REPL_USER: cmVwbGljYQ==
#   MYSQL_REPL_PASSWORD: cmVwbGljYV9wYXNz
# ---
# Headless Service, allowing StatefulSet to discover Master & Slave nodes
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: url-shortener
spec:
  clusterIP: None # Headless Service
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
# 5️⃣ StatefulSet 定义（Master & Slave）
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: url-shortener
spec:
  serviceName: "mysql"
  replicas: 3 # 1 Master + 2 Slaves
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          # env:
          # - name: MYSQL_ROOT_PASSWORD
          #   valueFrom:
          #     secretKeyRef:
          #       name: mysql-secret
          #       key: MYSQL_ROOT_PASSWORD
          # - name: MYSQL_REPL_USER
          #   valueFrom:
          #     secretKeyRef:
          #       name: mysql-secret
          #       key: MYSQL_REPL_USER
          # - name: MYSQL_REPL_PASSWORD
          #   valueFrom:
          #     secretKeyRef:
          #       name: mysql-secret
          #       key: MYSQL_REPL_PASSWORD
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: config-volume
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: mysql-config
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
# MySQL NetworkPolicy, allowing only the application to access MySQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: url-shortener
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: backend
      ports:
        - protocol: TCP
          port: 3306
